# opcua-howick

./: .clippy.toml  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  IROH.md  Makefile.toml  README.md  config.agent.dev-http.toml  config.agent.pi-zero.toml  config.agent.toml  config.agent.windows.toml  config.option-a.toml  config.option-b-pi5.toml  config.pi-zero.toml  config.pi5.toml  config.toml  config.windows.toml  fnox.toml  hk.pkl  howick-agent.dev-http.toml  howick-agent.dev-mock.toml  howick-agent.dev.toml  howick-agent.pi-zero.toml  howick-agent.windows.toml  howick-frama.dev-http.toml  howick-frama.dev-mock.toml  howick-frama.dev.toml  howick-frama.pi-zero.toml  howick-frama.windows.toml  mise.toml  opcua-howick.dev.toml  opcua-howick.pi5.toml  opcua-howick.windows.toml  opcua-server.dev.toml  opcua-server.pi5.toml  opcua-server.windows.toml  pitchfork.local.toml.example  pitchfork.toml  release.toml  (+1 more)
.github/workflows/: ci.yml
.mise/tasks/: build.toml  daemon.toml  dev.toml  device.toml  speckle.toml
config/: fnox.pi-zero.toml  fnox.pi5.toml  howick-frama.dev-http.toml  howick-frama.dev-mock.toml  howick-frama.dev.toml  howick-frama.pi-zero.toml  howick-frama.service  mise.pi-zero.toml  mise.pi5.toml  mise.windows.toml  opcua-server.dev.toml  opcua-server.windows.toml  pitchfork.pi-zero.toml  pitchfork.pi5.toml  pitchfork.windows.toml
crates/core/: Cargo.toml  build.rs
crates/core/src/: config.rs  http_poller.rs  lib.rs  updater.rs  usb_gadget.rs
crates/howick-frama/: Cargo.toml
crates/howick-frama/src/: main.rs
crates/howick-frama/src/edge_agent/: mod.rs  opcua_client.rs  sensor.rs
crates/mock-plat-trunk/: Cargo.toml
crates/mock-plat-trunk/src/: main.rs
crates/opcua-server/: Cargo.toml
crates/opcua-server/src/: lib.rs  main.rs
crates/opcua-server/src/assets/: dashboard.html
crates/opcua-server/src/job_server/: http.rs  mod.rs  opcua_server.rs  watcher.rs
crates/opcua-server/tests/: opcua.rs  pipeline.rs
deploy/: deploy-pi-zero.sh  deploy-pi.sh  howick-agent-update.service  howick-agent-update.sh  howick-agent-update.timer  howick-agent.service  howick-frama.service  opcua-howick-update.service  opcua-howick-update.sh  opcua-howick-update.timer  opcua-howick.service  opcua-server.service
dev/: mock-plat-trunk.py  start.sh
dev/fixtures/: T1.csv  W1.csv
dev/fixtures/Gerard_25032026/: 25062026.skp
dev/fixtures/Gerard_25032026/Assembly_Documents_Skp_Layout/20260325/all/: 25062026_all_Export.layout
dev/fixtures/Gerard_25032026/machinefiles/20260325/Default/FrameCADExport/350S162-33/walls/: 25062026_wall1_walls.xml  25062026_wall2_walls.xml
dev/fixtures/Gerard_25032026/machinefiles/20260325/Default/Howick_H400/350S162-33/walls/: 25062026_wall1_walls.csv  25062026_wall2_walls.csv
docs/: INDEX.md  adr-0001-deployment-topologies.md  architecture.md  coil-sensor.md  ops.md  pi-zero-usb-gadget.md  topology.md
docs/adr/: 0001-deployment-topologies.md  0002-two-design-workflows.md  0003-multi-agent-node-managers.md  0004-speckle-sketchup-bridge.md  0005-speckle-geometry-findings.md
docs/customer/: 01-proposal.md  01-setup.md  02-provisioning.md  02-system-overview.md  03-bom.md  03-hardware-quote.md  04-coil-sensor.md  04-setup-guide.md  05-roadmap.md  06-pi-zero-setup.md  07-ops-runbook.md  hardware-quote.md  ops-runbook.md  pi-zero-setup.md  proposal.md  provisioning.md  roadmap.md  setup-guide.md  setup.md  system-overview.md
docs/customer/maxxi-factory/: 01-company-profile.md  02-site-checklist.md  03-email-erick.md
docs/customer/prin/: 01-company-profile.md  01-proposal.md  02-site-checklist.md  02-system-overview.md  03-current-workflow.md  03-hardware-quote.md  05-roadmap.md
docs/customer/steel-solutions/: 01-company-profile.md  02-site-checklist.md
docs/machines/: framecad.md  howick-frama.md
docs/templates/: howick.typ
src/: config.rs  http_poller.rs  http_server.rs  lib.rs  machine.rs  main.rs  opcua_client.rs  poller.rs  sensor.rs  server.rs  updater.rs  usb_gadget.rs  watcher.rs
src/agent/: main.rs
src/edge_agent/: mod.rs  opcua_client.rs  sensor.rs
src/job_server/: http.rs  opcua_server.rs  watcher.rs
tests/: opcua.rs  pipeline.rs  update.rs
tools/speckle-docker/: .mise.toml  README.md  docker-compose.yml
tools/speckle-server/: .env.example  .mise.toml  CLAUDE.md  README.md  pitchfork.toml
tools/speckle-server/tasks/: admin-ensure  server-build  setup  test
tools/speckle-watcher/: .env.example  .mise.toml  README.md  docker-compose.yml  pyproject.toml
tools/speckle-watcher/src/speckle_watcher/: converter.py  inspect_skp.py
