[workspace]
members = [
    "crates/core",
    "crates/opcua-server",
    "crates/howick-frama",
    "crates/mock-plat-trunk",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/joeblew999/opcua-howick"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror          = "2"
anyhow             = "1"
serde              = { version = "1", features = ["derive"] }
toml               = "0.8"
notify             = "6"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-opcua        = { version = "0.18", features = ["server", "client"] }
serde_json         = "1"
