[workspace]
members = [
    "crates/core",
    "crates/opcua-server",
    "crates/howick-frama",
    "crates/mock-plat-trunk",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/joeblew999/opcua-howick"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror          = "2"
anyhow             = "1"
serde              = { version = "1", features = ["derive"] }
toml               = "0.8"
notify             = "6"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json         = "1"
# async-opcua is NOT shared here — each crate pins its own features:
#   opcua-server: features = ["server", "client"]
#   howick-frama: features = ["client"]  (no server code on Pi Zero)

# ── Release profiles ──────────────────────────────────────────────────────────
# dev: default (fast compile)
# release: standard optimisations for Pi 5 / Mac / Windows
[profile.release]
opt-level = 3
lto       = "thin"

# Pi Zero 2W: minimise binary size — cargo build --profile release-pi-zero
# ~30-40% smaller than release profile; worth the extra link time
[profile.release-pi-zero]
inherits      = "release"
opt-level     = "z"   # optimise for size
lto           = true  # full LTO — slow but smallest binary
codegen-units = 1     # single codegen unit — required for full LTO
strip         = true  # strip symbols from final binary
