[project]
name = "speckle-watcher"
version = "0.1.0"
description = "Speckle model watcher + framing extractor for opcua-howick"
requires-python = ">=3.10"
dependencies = [
    "specklepy>=2.20",
]

[project.scripts]
inspect-skp = "speckle_watcher.inspect_skp:main"
watcher = "speckle_watcher.watcher:main"
